# advantech-hackathon

./: .gitignore  README.md  install.sh  package-lock.json  pyproject.toml
crack.v1i.yolov11/: data.yaml  inference.py  train.py
crack.v1i.yolov11/my_results/: issue_2025_04_26_10_33_07.json  issue_2025_04_26_10_33_08.json  issue_2025_04_26_10_33_09.json  issue_2025_04_26_10_33_10.json  issue_2025_04_26_10_33_11.json  issue_2025_04_26_10_38_35.json  issue_2025_04_26_10_38_36.json  issue_2025_04_26_10_38_37.json  issue_2025_04_26_10_38_38.json  issue_2025_04_26_10_38_39.json  issue_2025_04_26_10_38_56.json  issue_2025_04_26_10_38_57.json  issue_2025_04_26_10_39_12.json  issue_2025_04_26_10_39_18.json  issue_2025_04_26_10_39_22.json  issue_2025_04_26_10_39_24.json  issue_2025_04_26_10_39_31.json  issue_2025_04_26_10_39_33.json  issue_2025_04_26_10_39_34.json  issue_2025_04_26_10_39_46.json  issue_2025_04_26_10_39_51.json  issue_2025_04_26_10_39_54.json  issue_2025_04_26_10_58_11.json  issue_2025_04_26_10_58_12.json  issue_2025_04_26_10_58_13.json  issue_2025_04_26_10_58_14.json  issue_2025_04_26_10_58_15.json  issue_2025_04_26_10_58_24.json  issue_2025_04_26_10_58_31.json  issue_2025_04_26_10_58_32.json  issue_2025_04_26_10_58_44.json  issue_2025_04_26_10_58_47.json  issue_2025_04_26_10_58_53.json  issue_2025_04_26_10_58_57.json  issue_2025_04_26_10_58_59.json  issue_2025_04_26_10_59_06.json  issue_2025_04_26_10_59_08.json  (+115 more)
frontend/: package-lock.json
quick_start/: step_4_develop_test_component.md
test/: README.md  sample_metadata.json  upload_test.sh
(+1265 files in other folders)
