[tool.poetry]
name = "advantech-hackathon"
version = "0.1.0"
description = ""
authors = ["Rich627 <rich.liu0912@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.23"
boto3 = "^1.37.37"
reportlab = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
