[tool.poetry]
name = "advantech-hackathon"
version = "0.1.0"
description = ""
authors = ["Rich627 <rich.liu0912@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.23"
boto3 = "^1.37.37"
reportlab = "^4.4.0"
opensearch-dsl = "^2.1.0"
requests-aws4auth = "^1.3.1"
opensearch-py = "^2.8.0"
numpy = "^2.2.5"
langchain-community = "^0.3.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
